MFC r298519: Fix streams and svr4 module dependency. Both modules are complaining about undefined symbol svr4_delete_socket which was moved from streams to the svr4 module in r160558 that created a two-way dependency between them.

MFC r298520:
Allow to build svr4 module with SYSV support separatelly from the kernel build.

PR:		208464
Reported by:	Kristoffer Eriksson

Former-commit-id: 130f5afded6daea92969bb55a5abd737794bc2ac